    - rename unit systemd-journald.socket to journald.socket;
    - rename unit systemd-journald.service to journald.service;
    - rename systemd-journald to journald;
    - rename system group systemd-journal to journal;
    - rename unit systemd-journal-flush.service to journal-flush.service;
    - rename library libsystemd-journal.so to journal.so;
 * remove systemd-journal-remote program;
 * remove systemd-journal-gatewayd program, service and socket;
 * remove gnutls support;
 * remove microhttpd support;
 * remove journal catalog support;
 * ansi color:
    - change color status messages for jobs in progress state;
    - use light red color instead of highlight red;
    - use light green color instead of highlight green;
    - use light blue color instead of highlight blue;
    - use light yellow color instead of highlight yellow;
 * change ansi color status messages for jobs in progress state;
 * remove gcrypt support;
 * remove python support;
 * add /etc/default/locale;
 
   systemd (214.1)
~~~~~~~
        * docs:
             (+) remove gtk-doc build;
             (+) remove sysvinit README;
             (+) remove var-log README;
        * config:
             (+) remove /etc/hostname;
             (+) remove /etc/locale.conf;
             (+) remove /etc/vconsole.conf;
        * data:
             (+) move hwdb to separate module udev;
             (+) move cdrom_id rules file to separate module udev;
             (+) move v4l_id rules file to separate module udev;
             (+) move accelerometer rules file to separate module udev;
             (+) move mtd_probe rules file to separate module udev;
             (+) move kmod rules file to separate module udev;
             (+) move udev rules file to separate module udev;
        * environment:
             (+) remove PREVLEVEL variable;
             (+) remove RUNLEVEL variable;
        * program:
             (+) remove systemd-sysctl program;
             (+) remove systemd-resolved program;